--- a/dataBase/dataBase/dataBase.csproj
+++ b/dataBase/dataBase/dataBase.csproj
@@ -50,9 +50,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="db.cs" />
-    <Compile Include="dbUser.cs" />
-    <Compile Include="dbUserTesting.cs" />
+    <Compile Include="Appointment.cs" />
+    <Compile Include="db\db.cs" />
+    <Compile Include="db\dbAppointment.cs" />
+    <Compile Include="db\dbDoctor.cs" />
+    <Compile Include="db\dbUser.cs" />
+    <Compile Include="testing\dbDoctorTesting.cs" />
+    <Compile Include="testing\dbUserTesting.cs" />
+    <Compile Include="Doctor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,8 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="testing\test.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="UserTesting.cs" />
+    <Compile Include="testing\UserTesting.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -89,6 +95,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
