rename db dbHelper

--- a/dataBase/dataBase/dataBase.csproj
+++ b/dataBase/dataBase/dataBase.csproj
@@ -51,9 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Appointment.cs" />
-    <Compile Include="db\db.cs" />
+    <Compile Include="db\dbHelper.cs" />
     <Compile Include="db\dbAppointment.cs" />
     <Compile Include="db\dbDoctor.cs" />
+    <Compile Include="db\dbPatient.cs" />
     <Compile Include="db\dbUser.cs" />
     <Compile Include="testing\dbDoctorTesting.cs" />
     <Compile Include="testing\dbUserTesting.cs" />
