--- a/dataBase/dataBase/dataBase.csproj
+++ b/dataBase/dataBase/dataBase.csproj
@@ -56,6 +56,7 @@
     <Compile Include="db\dbDoctor.cs" />
     <Compile Include="db\dbPatient.cs" />
     <Compile Include="db\dbUser.cs" />
+    <Compile Include="Patient.cs" />
     <Compile Include="testing\dbDoctorTesting.cs" />
     <Compile Include="testing\dbUserTesting.cs" />
     <Compile Include="Doctor.cs" />
