--- a/dataBase/dataBase/dataBase.csproj
+++ b/dataBase/dataBase/dataBase.csproj
@@ -64,6 +64,12 @@
     <Compile Include="db\dbPatient.cs" />
     <Compile Include="db\dbUser.cs" />
     <Compile Include="Disease.cs" />
+    <Compile Include="doctorRegisteration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="doctorRegisteration.Designer.cs">
+      <DependentUpon>doctorRegisteration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Doctor_Prf.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,11 +90,26 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="patientRegistration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="patientRegistration.Designer.cs">
+      <DependentUpon>patientRegistration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="registration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="registration.Designer.cs">
+      <DependentUpon>registration.cs</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="doctorRegisteration.resx">
+      <DependentUpon>doctorRegisteration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Doctor_Prf.resx">
       <DependentUpon>Doctor_Prf.cs</DependentUpon>
@@ -98,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="patientRegistration.resx">
+      <DependentUpon>patientRegistration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -109,6 +133,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="registration.resx">
+      <DependentUpon>registration.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Doctor._prfcs">
       <SubType>Form</SubType>
     </None>
