--- a/dataBase/dataBase/dataBase.csproj
+++ b/dataBase/dataBase/dataBase.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Doctor_Prf.Designer.cs">
       <DependentUpon>Doctor_Prf.cs</DependentUpon>
     </Compile>
+    <Compile Include="insert_appointment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="insert_appointment.Designer.cs">
+      <DependentUpon>insert_appointment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,9 +90,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="pationt_prf.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pationt_prf.Designer.cs">
+      <DependentUpon>pationt_prf.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="user_update.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="user_update.Designer.cs">
+      <DependentUpon>user_update.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,8 +114,14 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="insert_appointment.resx">
+      <DependentUpon>insert_appointment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pationt_prf.resx">
+      <DependentUpon>pationt_prf.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -109,6 +133,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="user_update.resx">
+      <DependentUpon>user_update.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Doctor._prfcs">
       <SubType>Form</SubType>
     </None>
